feat: add codeCollapsible prop to ComponentPreview in multiple demos

--- a/src/features/blog/content/copy-button.mdx
+++ b/src/features/blog/content/copy-button.mdx
@@ -12,6 +12,7 @@ updatedAt: 2026-02-20
   className="**:data-[slot=component-preview]:min-h-40"
   name="copy-button-demo"
   openInV0Url="https://chanhdai.com/r/copy-button.json"
+  codeCollapsible
 />
 
 ## Features
