--- a/src/features/blog/content/scroll-fade-effect.mdx
+++ b/src/features/blog/content/scroll-fade-effect.mdx
@@ -10,6 +10,7 @@ updatedAt: 2026-02-20
 <ComponentPreview
   name="scroll-fade-effect-demo-01"
   openInV0Url="https://chanhdai.com/r/scroll-fade-effect.json"
+  codeCollapsible
 />
 
 ## Features
@@ -112,15 +113,27 @@ import { ScrollFadeEffect } from "@/components/ncdai/scroll-fade-effect"
 
 ### Horizontal Scrolling
 
-<ComponentPreview name="scroll-fade-effect-demo-02" data-code-meta="{28}" />
+<ComponentPreview
+  name="scroll-fade-effect-demo-02"
+  data-code-meta="{28}"
+  codeCollapsible
+/>
 
 ### shadcn/ui Scroll Area
 
-<ComponentPreview name="scroll-fade-effect-demo-03" data-code-meta="{16}" />
+<ComponentPreview
+  name="scroll-fade-effect-demo-03"
+  data-code-meta="{16}"
+  codeCollapsible
+/>
 
 ### shadcn/ui Scroll Area – Horizontal Scrolling
 
-<ComponentPreview name="scroll-fade-effect-demo-04" data-code-meta="{31}" />
+<ComponentPreview
+  name="scroll-fade-effect-demo-04"
+  data-code-meta="{31}"
+  codeCollapsible
+/>
 
 ## References
 
