--- a/src/features/blog/content/text-flip.mdx
+++ b/src/features/blog/content/text-flip.mdx
@@ -11,6 +11,7 @@ updatedAt: 2026-02-20
 <ComponentPreview
   name="text-flip-demo"
   openInV0Url="https://chanhdai.com/r/text-flip.json"
+  codeCollapsible
 />
 
 ## Installation
