refactor(consent-manager): consolidate consent-manager and consent-manager-client into a single component for simplicity and maintainability
docs: update documentation to reflect changes in consent-manager component structure and import paths

--- a/src/features/doc/content/consent-manager.mdx
+++ b/src/features/doc/content/consent-manager.mdx
@@ -77,21 +77,15 @@ npm install clsx tailwind-merge @c15t/nextjs
   collapsible={false}
 />
 
-<Step>Install the required shadcn/ui components</Step>
+<Step>Install the required components</Step>
 
-- https://ui.shadcn.com/docs/components/button
+- [Button](https://ui.shadcn.com/docs/components/button)
 
 <Step>Copy and paste the following code into your project</Step>
 
 <ComponentSource
-  src="src/components/consent-manager.tsx"
+  name="consent-manager"
   title="components/ncdai/consent-manager.tsx"
-  showLineNumbers
-/>
-
-<ComponentSource
-  src="src/registry/components/consent-manager/consent-manager-client.tsx"
-  title="components/ncdai/consent-manager-client.tsx"
   showLineNumbers
 />
 
