--- a/src/features/doc/content/copy-button.mdx
+++ b/src/features/doc/content/copy-button.mdx
@@ -55,13 +55,11 @@ npm install clsx tailwind-merge class-variance-authority lucide-react motion rad
   collapsible={false}
 />
 
-<Step>Copy and paste the following code into your project</Step>
+<Step>Install the required components</Step>
 
-<ComponentSource
-  src="src/components/ui/button.tsx"
-  title="components/ui/button.tsx"
-  showLineNumbers
-/>
+- [Button](https://ui.shadcn.com/docs/components/button)
+
+<Step>Copy and paste the following code into your project</Step>
 
 <ComponentSource
   src="src/hooks/use-copy-to-clipboard.ts"
