--- a/src/features/doc/content/code-block-command.mdx
+++ b/src/features/doc/content/code-block-command.mdx
@@ -54,29 +54,15 @@ npm install clsx tailwind-merge class-variance-authority lucide-react motion jot
   collapsible={false}
 />
 
+<Step>Install the required components</Step>
+
+- [Copy Button](https://chanhdai.com/components/copy-button)
+
 <Step>Copy and paste the following code into your project</Step>
 
 <ComponentSource
   src="src/components/base/ui/tabs.tsx"
   title="components/ncdai/base/tabs.tsx"
-  showLineNumbers
-/>
-
-<ComponentSource
-  src="src/components/ui/button.tsx"
-  title="components/ui/button.tsx"
-  showLineNumbers
-/>
-
-<ComponentSource
-  src="src/hooks/use-copy-to-clipboard.ts"
-  title="hooks/use-copy-to-clipboard.ts"
-  showLineNumbers
-/>
-
-<ComponentSource
-  name="copy-button"
-  title="components/ncdai/copy-button.tsx"
   showLineNumbers
 />
 
