refactor: remove codeCollapsible prop from multiple ComponentPreview instances and clean up related code in CodeCollapsibleWrapper

--- a/src/features/doc/content/scroll-fade-effect.mdx
+++ b/src/features/doc/content/scroll-fade-effect.mdx
@@ -10,7 +10,6 @@ updatedAt: 2026-02-20
 <ComponentPreview
   name="scroll-fade-effect-demo-01"
   openInV0Url="https://chanhdai.com/r/scroll-fade-effect.json"
-  codeCollapsible
 />
 
 ## Features
@@ -113,27 +112,15 @@ import { ScrollFadeEffect } from "@/components/ncdai/scroll-fade-effect"
 
 ### Horizontal Scrolling
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-02"
-  data-code-meta="{28}"
-  codeCollapsible
-/>
+<ComponentPreview name="scroll-fade-effect-demo-02" data-code-meta="{28}" />
 
 ### shadcn/ui Scroll Area
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-03"
-  data-code-meta="{16}"
-  codeCollapsible
-/>
+<ComponentPreview name="scroll-fade-effect-demo-03" data-code-meta="{16}" />
 
 ### shadcn/ui Scroll Area – Horizontal Scrolling
 
-<ComponentPreview
-  name="scroll-fade-effect-demo-04"
-  data-code-meta="{31}"
-  codeCollapsible
-/>
+<ComponentPreview name="scroll-fade-effect-demo-04" data-code-meta="{31}" />
 
 ## References
 
