fix(haptic): update example button in documentation and code to use <Button> component; enhance documentation with Vibration API link

--- a/src/features/doc/content/haptic.mdx
+++ b/src/features/doc/content/haptic.mdx
@@ -73,7 +73,7 @@ function haptic(): void
 
 Automatically detects the device platform and uses the appropriate method:
 
-- Android/modern browsers: Vibration API
+- Android/modern browsers: [Vibration API](https://developer.mozilla.org/en-US/docs/Web/API/Vibration_API)
 - iOS: Checkbox switch element trick
 
 ### supportsHaptic
