refactor(haptic): wrap haptic function calls in arrow functions
Ensure consistent usage of arrow functions for onClick handlers
to prevent potential issues with function binding and execution
context. This change improves code readability and maintains
uniformity across the codebase.

--- a/src/features/doc/content/haptic.mdx
+++ b/src/features/doc/content/haptic.mdx
@@ -59,7 +59,7 @@ import { haptic } from "@/lib/haptic"
 ```
 
 ```tsx
-<Button onClick={haptic}>Haptic</Button>
+<Button onClick={() => haptic()}>Haptic</Button>
 ```
 
 ## Examples
